chore: add basic routing, add loading screen, not found page, and skeleton, also fix UI element wrong layouting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,14 @@
     "jsx": "react-jsx",
     "baseUrl": "src"
   },
-  "include": ["src", "assets", "components", "hooks", "lib", "pages", "utils"]
+  "include": [
+    "src",
+    "assets",
+    "components",
+    "hooks",
+    "lib",
+    "routes",
+    "types",
+    "utils"
+  ]
 }
