--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
