--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
     "typescript": "^4.5.4",
+    "use-debounce": "^7.0.1",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
