--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@kontenbase/sdk": "^0.0.8",
+    "@kontenbase/sdk": "^0.2.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -13,10 +13,10 @@
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.9.1",
     "axios": "^0.24.0",
     "copy-to-clipboard": "^3.3.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
     "history": "^5.2.0",
     "js-cookie": "^3.0.1",
@@ -26,6 +26,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-error-boundary": "^3.1.4",
     "react-icons": "^4.3.1",
+    "react-image-file-resizer": "^0.4.7",
     "react-markdown": "^7.1.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
