--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-markdown": "^7.1.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
+    "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
