--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
+    "rich-markdown-editor": "^11.21.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "use-debounce": "^7.0.1",
     "web-vitals": "^2.1.2",
