--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-image-file-resizer": "^0.4.7",
     "react-markdown": "^7.1.1",
     "react-moment": "^1.1.1",
+    "react-onesignal": "^2.0.2",
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^6.2.1",
