--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
     "history": "^5.2.0",
+    "html-to-draftjs": "^1.5.0",
     "immutable": "^4.0.0",
     "js-cookie": "^3.0.1",
     "moment-timezone": "^0.5.34",
