--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@kontenbase/sdk": "^0.4.3",
+    "@kontenbase/sdk": "^0.5.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -36,6 +36,7 @@
     "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "redux-persist": "^6.0.0",
     "rich-markdown-editor": "^11.21.3",
     "styled-components": "^5.3.3",
