chore: change realtime comment trigger to hit endpoint

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ REACT_APP_KONTENBASE_API_KEY=
 REACT_APP_KONTENBASE_API_URL=
 REACT_APP_EMAIL_API=
 REACT_APP_FRONTEND_URL=
+
+REACT_APP_FUNCTION_HOOKS_COMMENT_URL
+REACT_APP_FUNCTION_HOOKS_USERNAME=
+REACT_APP_FUNCTION_HOOKS_PASSWORD=
