--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "twist-clone",
+  "name": "talk-ink",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@kontenbase/sdk": "^0.5.2",
+    "@kontenbase/sdk": "^0.6.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -13,12 +13,11 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "copy-to-clipboard": "^3.3.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
-    "history": "^5.2.0",
     "html-to-draftjs": "^1.5.0",
     "immutable": "^4.0.0",
     "js-cookie": "^3.0.1",
