feat: basic invite channel member

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "@kontenbase/sdk": "^0.6.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
