chore: add new entry env example

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ REACT_APP_NOTIFICATION_API=
 REACT_APP_ONE_SIGNAL_ID=
 
 REACT_APP_FUNCTION_HOOKS_COMMENT_URL=
+REACT_APP_FUNCTION_HOOKS_SEARCH_URL=
 REACT_APP_FUNCTION_HOOKS_USERNAME=
 REACT_APP_FUNCTION_HOOKS_PASSWORD=
 
