--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "copy-to-clipboard": "^3.3.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "emoji-picker-react": "^3.5.0",
     "formik": "^2.2.9",
     "html-to-draftjs": "^1.5.0",
     "immutable": "^4.0.0",
