--- a/package.json
+++ b/package.json
@@ -29,33 +29,24 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.3",
-    "@codemirror/language-data": "^0.19.1",
-    "@codemirror/theme-one-dark": "^0.19.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@headlessui/react": "^1.4.3",
     "@kontenbase/sdk": "^0.6.1",
     "@reduxjs/toolkit": "^1.7.1",
-    "@remirror/dev": "^1.0.21",
-    "@remirror/extension-codemirror6": "^0.2.1",
     "@remirror/extension-file": "^0.3.9",
     "@remirror/pm": "^1.0.11",
     "@remirror/react": "^1.0.21",
-    "@remirror/react-editors": "^0.1.51",
+    "@remirror/styles": "^1.1.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@tiptap/extension-mention": "^2.0.0-beta.95",
-    "@tiptap/react": "^2.0.0-beta.107",
-    "@tiptap/starter-kit": "^2.0.0-beta.180",
     "@types/jest": "^27.0.3",
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
-    "ckeditor4-react": "^2.1.0",
-    "ckeditor5-custom-build": "file:./ckeditor5",
     "copy-to-clipboard": "^3.3.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -79,10 +70,9 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "redux-persist": "^6.0.0",
-    "remirror": "^1.0.62",
+    "remirror": "^1.0.63",
     "rich-markdown-editor": "^11.21.3",
     "styled-components": "^5.3.3",
-    "tippy.js": "^6.3.7",
     "typescript": "^4.5.4",
     "use-debounce": "^7.0.1",
     "web-vitals": "^2.1.2",
