--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "use-debounce": "^7.0.1",
+    "use-long-press": "^1.1.2",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
