--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@remirror/pm": "^1.0.11",
     "@remirror/react": "^1.0.21",
     "@remirror/styles": "^1.1.2",
+    "@tailwindcss/line-clamp": "^0.3.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
