--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "copy-to-clipboard": "^3.3.1",
     "emoji-picker-react": "^3.5.0",
     "formik": "^2.2.9",
+    "html-entities": "^2.3.2",
     "html-to-draftjs": "^1.5.0",
     "immutable": "^4.0.0",
     "js-cookie": "^3.0.1",
